# simul

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  PROJECT_STATUS_OLD.md  README.md  debug-bc.mjs  main.py  package-lock.json  pyproject.toml  rough_plan.md  run_simulator.bat  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh  test-drill-ui.mjs  test-preprocess-ui.mjs  test-preprocess-workflow.mjs  test-tab-ui.mjs  test_solvers_with_stl.py  test_stl_models.py
.claude/: CLAUDE.md  launch.json  settings.local.json
CT-dicom/: a0000.dcm  a0001.dcm  a0002.dcm  a0003.dcm  a0004.dcm  a0005.dcm  a0006.dcm  a0007.dcm  a0008.dcm  a0009.dcm  a0010.dcm  a0011.dcm  a0012.dcm  a0013.dcm  a0014.dcm  a0015.dcm  a0016.dcm  a0017.dcm  a0018.dcm  a0019.dcm  a0020.dcm  a0021.dcm  a0022.dcm  a0023.dcm  a0024.dcm  a0025.dcm  a0026.dcm  a0027.dcm  a0028.dcm  a0029.dcm  a0030.dcm  a0031.dcm  a0032.dcm  a0033.dcm  a0034.dcm  a0035.dcm  a0036.dcm  a0037.dcm  a0038.dcm  a0039.dcm  (+89 more)
backend/anatomy/: __init__.py  base.py  spine.py
backend/anatomy/tests/: test_assembly_with_spine.py  test_facet_detection.py  test_spine_profile.py
backend/api/: __init__.py  app.py  config.py  ws_handler.py
backend/api/models/: __init__.py  analysis.py
backend/api/services/: analysis.py  auto_material.py  dicom_pipeline.py  guideline.py  implants.py  mesh_extract.py  segmentation.py
backend/api/tests/: test_auto_material.py  test_dicom_converter.py  test_gpu_detect.py  test_mesh_extract.py  test_models.py  test_pipeline_e2e.py  test_segmentation_pipeline.py
backend/orchestrator/: __init__.py  cli.py  config.py
backend/preprocessing/: __init__.py  adjacency.py  assembly.py  voxel_to_hex.py
backend/scripts/: gen_implant_stls.py
backend/segmentation/: factory.py  labels.py  nnunet_spine.py  totalspineseg.py
backend/utils/: collision.py  mesh.py  transform.py  volume_io.py
config/: pipeline.toml
docs/: CONTACT_FRAMEWORK.md  SIMULATOR_PROGRESS.md  SPG_METHOD.md  api_reference.md  fea_framework.md  fem_solver.md  getting_started.md  preprocessing.md
frontend/: index.html  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
scripts/: gen_implant_stls.py
spine_sim/: SIMULATOR_PROGRESS.md  __init__.py
spine_sim/analysis/: __init__.py
spine_sim/app/: __init__.py  simulator.py
spine_sim/core/: __init__.py  marching_cubes.py  mesh.py  volume.py
spine_sim/endoscope/: __init__.py  camera.py  instrument.py
src/core/: guideline.py  implants.py  incremental_mc.py  volume.py
src/frontend/: package-lock.json  package.json  vite.config.ts
src/pipeline/: cache.py  cli.py
src/segmentation/: __init__.py  base.py  labels.py  totalseg.py  totalspineseg.py
src/server/: analysis_pipeline.py  app.py  auto_material.py  config.py  dicom_converter.py  mesh_extract_pipeline.py  models.py  segmentation_pipeline.py  ws_handler.py
src/simulator/: index.html
web/: .gitignore  WEB_SIMULATOR_PROGRESS.md  index.html
web/src/: main.js  voxel.js
(+347 files in other folders)
