[project]
name = "pysim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "taichi>=1.7.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "SimpleITK>=2.3",
    "tetgen>=0.8.2",
    "pyvista>=0.46.5",
    "playwright>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
]
