[project]
name = "pysim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "taichi>=1.7.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "SimpleITK>=2.3",
    "tetgen>=0.8.2",
    "pyvista>=0.46.5",
    "playwright>=1.58.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "typer>=0.12.0",
    "nibabel>=5.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "scikit-image>=0.26.0",
    "python-multipart>=0.0.22",
]

[project.scripts]
spine-sim = "src.pipeline.cli:app"

[project.optional-dependencies]
seg-ct = ["TotalSegmentator>=2.0"]
seg-mri = ["totalspineseg", "nnunetv2==2.6.2"]
seg-unified = ["nnunetv2>=2.5"]
seg-train = ["nnunetv2>=2.5", "torch>=2.0", "batchgenerators>=0.25"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "hatchling>=1.18",
]
